fix: search_filters on mobile

--- a/src/less/search.less
+++ b/src/less/search.less
@@ -330,7 +330,17 @@ html.no-js #clear_search.hide_if_nojs {
   .search_filters {
     margin: 0 10px;
     padding: 0.5rem 0;
-    width: auto;
+    width: calc(100% - 20px);
+    min-width: 0;
+    overflow-x: hidden;
+    flex-wrap: wrap;
+
+    select {
+      flex: 1 1 6rem;
+      min-width: 0;
+      .ltr-margin-right(0.5rem);
+      margin-bottom: 0.25rem;
+    }
   }
 
   .category {
